--- a/index.html
+++ b/index.html
@@ -3,35 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guión Maestro</title>
+    <title>Guión Principal</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
-            max-width: 800px; 
+            max-width: 900px; 
             margin: 0 auto; 
             padding: 20px; 
-            line-height: 1.6; 
+            line-height: 1.6;
+            background: #f8f9fa;
+        }
+        .header {
+            background: #007bff;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .content-box {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
         pre { 
             background: #f4f4f4; 
             padding: 15px; 
             border-radius: 5px; 
-            white-space: pre-wrap; 
+            white-space: pre-wrap;
+            border-left: 4px solid #007bff;
+        }
+        .loading {
+            text-align: center;
+            color: #666;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
-    <h1>📋 Guión Maestro</h1>
-    <div id="content">Cargando contenido...</div>
+    <div class="header">
+        <h1>📋 Guión Principal</h1>
+        <p>Documento principal para workflows N8N</p>
+    </div>
+    
+    <div class="content-box">
+        <div id="content" class="loading">Cargando contenido del guión principal...</div>
+    </div>
     
     <script>
-        fetch('guion-maestro.txt')
+        fetch('guion maestro principal.txt')
             .then(response => response.text())
             .then(text => {
                 document.getElementById('content').innerHTML = '<pre>' + text + '</pre>';
             })
             .catch(error => {
-                document.getElementById('content').innerHTML = '<p>Error cargando el documento.</p>';
+                document.getElementById('content').innerHTML = '<p style="color: red;">❌ Error cargando el documento del guión maestro.</p>';
             });
     </script>
 </body>
